bk_ida/gccida/g2/dwarf2out_frame_debug
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2082:6: error: use of undeclared identifier 'v7'
rtx *v7; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2107:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1626, "dwarf2out_frame_debug"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2136:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtx = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2147:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v17 = ( __int16 *)insn[2]; 
                  ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2160:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1009, "dwarf2out_stack_adjust"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2180:8: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v11 = -args_size_0; 
       ^~~~~~~~~~~
       args_size
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2184:1: error: use of undeclared identifier 'v7'
v7 = ( rtx *)insn[2]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2184:13: error: expected expression
v7 = ( rtx *)insn[2]; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2185:17: error: use of undeclared identifier 'v7'
v8 = *( _WORD *)v7; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2186:17: error: use of undeclared identifier 'v7'
if ( *( _WORD *)v7 == 47 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2188:28: error: use of undeclared identifier 'v7'
v11 = stack_adjust_offset( v7[1]); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2194:6: error: use of undeclared identifier 'v7'
v9 = v7[1]; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2204:37: error: expected expression
v11 += stack_adjust_offset( *( rtx *)( v12 + 8)); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2214:7: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v13 = args_size_0 + v11; 
      ^~~~~~~~~~~
      args_size
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2217:1: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
args_size_0 = v13; 
^~~~~~~~~~~
args_size
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2220:7: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v15 = args_size_0; 
      ^~~~~~~~~~~
      args_size
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2221:6: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
if ( args_size_0 != old_args_size ) 
     ^~~~~~~~~~~
     args_size
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:2223:17: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
old_args_size = args_size_0; 
                ^~~~~~~~~~~
                args_size
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_frame_debug/src/obj/dwarf2out.o] Error 1
